--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author: lqq
 language: zh-Hans
 timezone:
 
-avatar: http://demo.sc.chinaz.com/Files/pic/icons/2252/2009%E7%89%9B%E5%B9%B4%E5%9B%BE%E6%A0%87%E4%B8%8B%E8%BD%BD2.png
+avatar: https://raw.githubusercontent.com/LqqJohnny/LqqJohnny.github.io/blog/source/me.png
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
