--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,10 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-next
-
+theme: landscape
+#scheme: Muse
+scheme: Mist
+# scheme: Pisces
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
