--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: 199
-subtitle: 面试造火箭，上岗拧螺丝
-description: 它在我的机器上可以很好运行！
-author: lqq
+subtitle: 路漫漫其修远兮，我将上下而求索
+description: 兔子家的先生
+author: LqqJohnny
 language: zh-Hans
 timezone:
 
@@ -15,7 +15,7 @@ avatar: https://raw.githubusercontent.com/LqqJohnny/LqqJohnny.github.io/blog/sou
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
-root: /
+root: /LqqJohnny.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -80,13 +80,11 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
-#scheme: Muse
-scheme: Mist
-# scheme: Pisces
+theme: hexo-theme-next
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:LqqJohnny/lqqppl.github.io.git
+  repo: git@github.com:LqqJohnny/LqqJohnny.github.io.git
   branch: master
