配置travis自动部署

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,19 @@
-# .travis.yml
-language: node_js   #前端工程所以是JavaScript，编译环境是node_js
+language: node_js
 node_js:
-- '8'   #指定node版本
+- '8'
 branchs:
   only:
-  - blog  #指定只有检测到master分支有变动时才执行任务
+  - blog
+install:
+- npm install
+script:
+- hexo g
+addons:
+  ssh_known_hosts:
+  - 106.54.69.121
+before_install:
+- openssl aes-256-cbc -K $encrypted_0fe679bc9ce6_key -iv $encrypted_0fe679bc9ce6_iv
+  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
+after_success:
+- chmod 600 ~/.ssh/id_rsa
+- ssh blog@139.199.90.74 -o StrictHostKeyChecking=no 'cd /usr/local/webserver/nginx/html/LqqJohnny.github.io && git pull && hexo g -d'
