--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,32 @@
+# 使用语言
 language: node_js
-node_js:
-- '8'
-branchs:
+# node版本
+node_js: stable
+# 设置只监听哪个分支
+branches:
   only:
   - blog
-install:
-- npm install
-script:
-- hexo g
-addons:
-  ssh_known_hosts: 106.54.69.121
 # 缓存，可以节省集成的时间，这里我用了yarn，如果不用可以删除
 cache:
   apt: true
-      directories:
-          - node_modules
+  directories:
+    - node_modules
+# tarvis生命周期执行顺序详见官网文档
 before_install:
-- git config --global user.name "Godi13"
-- git config --global user.email "mqzq9388@gmail.com"
-- openssl aes-256-cbc -K $encrypted_0fe679bc9ce6_key -iv $encrypted_0fe679bc9ce6_iv
-  -in id_rsa.enc -out ~/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/id_rsa
+- git config --global user.name "LqqJohnny"
+- git config --global user.email "1277601297@qq.com"
+# 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
+- npm install -g hexo-cli
+install:
+- npm i 
+script:
+- hexo clean
+- hexo generate
 after_success:
-- ssh travis@106.54.69.121 -o StrictHostKeyChecking=no 'cd /usr/local/webserver/nginx/html/LqqJohnny.github.io && git pull && hexo g -d'
+- cd ./public
+- git init
+- git add --all .
+- git commit -m "Travis CI Auto Builder"
+# 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
+- git push --quiet --force https://$REPO_TOKEN@github.com/Godi13/Godi13.github.io.git
+  master
