--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ after_success:
 - git add --all .
 - git commit -m "Travis CI Auto Builder"
 # 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
-- git push --quiet --force https://$REPO_TOKEN@github.com/Godi13/Godi13.github.io.git
+- git push --quiet --force https://$REPO_TOKEN@github.com/LqqJohnny/LqqJohnny.github.io.git
   master
